# HeartDiseaseDetection

./: heartdisease.ipynb  heartdisease2.ipynb  pyproject.toml  readme.md  readme.txt  requirements.txt
