[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Heart"
version = "0.1.0"
description = "A project focused on heart disease analysis using machine learning."

dependencies = [
    "pandas==2.2.1",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "torch==2.2.2",
    "torchsummary==1.5.1",
    "jupyter",
    "ipykernel"
]
